nivasa-macros/tests/trybuild/validation_groups_empty.stderr
error: expected `#[groups("create", "update")]`
 --> tests/trybuild/validation_groups_empty.rs:5:5
  |
5 |     #[groups()]
  |     ^
