nivasa-macros/tests/trybuild/validation_groups_empty.rs
use nivasa_macros::Dto;

#[derive(Dto)]
struct CreateForm {
    #[groups()]
    #[is_email]
    email: String,
}

fn main() {}
